--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "ittools"
 version = "0.1.2"
-description = "Tweaked Hypermodern Python Project Template w/o Typing"
+description = "Python Iteration Tools"
 authors = ["Mathias Ammon <mathias.ammon@tuhh.de>"]
 license = "MIT"
 readme = "README.rst"
 repository = "https://github.com/tZ3ma/ittools"
 homepage = "https://github.com/tZ3ma/ittools"
-keywords = ["hypermodern", "template"]
+keywords = ["python-3", "iteration", "tools", "library"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
