--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ittools"
-version = "0.1.2"
+version = "0.1.3"
 description = "Python Iteration Tools"
 authors = ["Mathias Ammon <mathias.ammon@tuhh.de>"]
 license = "MIT"
@@ -12,7 +12,7 @@ keywords = ["python-3", "iteration", "tools", "library"]
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.27.1"
-pandas = "^1.4.2"
+pandas = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
